--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -16,6 +16,9 @@ jobs:
       # Used to host cibuildwheel
       - uses: actions/setup-python@v3
 
+      - name: Install requirements
+        run: python -m pip install -r requirements.txt
+
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.11.2
 
