--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-2019, macOS-11]
+        os: [ubuntu-20.04]
 
     steps:
       - uses: actions/checkout@v3
@@ -17,7 +17,9 @@ jobs:
       - uses: actions/setup-python@v3
 
       - name: Install requirements
-        run: python -m pip install -r requirements.txt
+        run: |
+          apt-get install -y librdkafka-dev
+          python -m pip install -r requirements.txt
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.11.2
