--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y librdkafka-dev
-          python -m pip install -r requirements.txt
+          python -m pip install cython
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.11.2
